--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,20 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+.navbar .menu .logo {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 4rem;
+}
+.navbar .menu .logo span {
+  font-weight: 300;
 }
 
 /* Page */
