--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-// navbar
+// Navbar
 .navbar {
     position: fixed;
     left: 0;
@@ -51,7 +51,7 @@
                 background-color: #eee;
                 transition: .3s;
                 position: relative;
-                &:after, &:before{
+                &::after, &::before{
                     content: '';
                     position: absolute;
                     width: inherit;
@@ -59,11 +59,11 @@
                     background: #eee;
                     transition: .5s;
                 }
-                &:after{
+                &::after{
                     transform: translateY(9px);
 
                 }
-                &:before{
+                &::before{
                     transform: translateY(-9px);
 
                 }
@@ -73,10 +73,7 @@
     }
 }
 
-
-
 /* Page */
-
 .container {
     min-height: 100vh;
     width: 100%;
@@ -139,5 +136,35 @@
                 }
             }
         }
+    }
+}
+
+// Animations
+.container.active{
+    .bar{
+        transform: rotate(360deg);
+        background-color: transparent;
+        &::before{
+            transform: translateY(0) rotate(45deg);
+        }
+        &::after{
+            transform: translateY(0) rotate(-45deg);
+        }
+    }
+
+    .main{
+        animation: main-animation 1s ease;
+        cursor: pointer;
+        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);        
+    }
+}
+
+// Keyframes
+@keyframes main-animation{
+    from{
+        transform: translate(0);
+    }
+    to{
+        transform: transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);        
     }
 }
