--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,6 @@
   transform: translateY(-9px);
 }
 
-/* Page */
 .container {
   min-height: 100vh;
   width: 100%;
@@ -123,6 +122,17 @@
   cursor: pointer;
   text-decoration: none;
 }
+.container .shadow {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
+  transform-origin: left;
+  transition: 0.5s;
+  background: #fff;
+}
 
 .container.active .bar {
   transform: rotate(360deg);
@@ -146,7 +156,7 @@
     transform: translate(0);
   }
   to {
-    transform: perspective(1300px);
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
   }
 }
 
@@ -155,6 +165,6 @@
     transform: translate(0);
   }
   to {
-    transform: perspective(1300px);
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
   }
 }/*# sourceMappingURL=style.css.map */
