--- a/styles/style.scss
+++ b/styles/style.scss
@@ -37,21 +37,25 @@
                 font-weight: 300;
             }
         }
-        .burger{
+
+        .burger {
             height: 4rem;
             width: 3rem;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            .bar{
+
+            .bar {
                 width: 1.9rem;
                 height: 1.5px;
                 border-radius: 2px;
                 background-color: #eee;
                 transition: .3s;
                 position: relative;
-                &::after, &::before{
+
+                &::after,
+                &::before {
                     content: '';
                     position: absolute;
                     width: inherit;
@@ -59,11 +63,13 @@
                     background: #eee;
                     transition: .5s;
                 }
-                &::after{
+
+                &::after {
                     transform: translateY(9px);
 
                 }
-                &::before{
+
+                &::before {
                     transform: translateY(-9px);
 
                 }
@@ -73,7 +79,7 @@
     }
 }
 
-/* Page */
+// Page
 .container {
     min-height: 100vh;
     width: 100%;
@@ -82,6 +88,7 @@
     overflow: hidden;
     transform-style: preserve-3d;
 
+    // Main
     .main {
         position: relative;
         width: 100%;
@@ -137,34 +144,54 @@
             }
         }
     }
+
+    // Shadows
+    .shadow{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        transform-style: preserve-3d;
+        transform-origin: left;
+        transition: .5s;
+        background: #fff;
+    }
 }
 
+
+
+
+
 // Animations
-.container.active{
-    .bar{
+.container.active {
+    .bar {
         transform: rotate(360deg);
         background-color: transparent;
-        &::before{
+
+        &::before {
             transform: translateY(0) rotate(45deg);
         }
-        &::after{
+
+        &::after {
             transform: translateY(0) rotate(-45deg);
         }
     }
 
-    .main{
+    .main {
         animation: main-animation 1s ease;
         cursor: pointer;
-        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);        
+        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
     }
 }
 
 // Keyframes
-@keyframes main-animation{
-    from{
+@keyframes main-animation {
+    from {
         transform: translate(0);
     }
-    to{
-        transform: transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);        
+
+    to {
+        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
     }
 }
