--- a/styles/style.scss
+++ b/styles/style.scss
@@ -146,7 +146,7 @@
     }
 
     // Shadows
-    .shadow{
+    .shadow {
         position: absolute;
         width: 100%;
         height: 100vh;
@@ -156,6 +156,16 @@
         transform-origin: left;
         transition: .5s;
         background: #fff;
+
+        &.one {
+            z-index: 1;
+            opacity: .15;
+        }
+
+        &.two {
+            z-index: 2;
+            opacity: .1;
+        }
     }
 }
 
@@ -183,6 +193,16 @@
         cursor: pointer;
         transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
     }
+
+    .shadow.one {
+        animation: shadow-one .6s ease-out;
+        transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
+    }
+
+    .shadow.two {
+        animation: shadow-two .6s ease-out;
+        transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+    }
 }
 
 // Keyframes
@@ -195,3 +215,33 @@
         transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
     }
 }
+
+@keyframes shadow-one {
+    0% {
+        transform: translate(0);
+    }
+
+    5% {
+        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+    }
+
+    100% {
+        transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
+    }
+}
+
+@keyframes shadow-two {
+    0% {
+        transform: translate(0);
+    }
+
+    20% {
+        transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+    }
+
+    100% {
+        transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+    }
+}
+    
+
