feat: change background-image

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fff;
 }
 .navbar .menu .logo {
   font-size: 1.1rem;
@@ -30,9 +29,11 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   line-height: 4rem;
+  color: red;
 }
 .navbar .menu .logo span {
-  font-weight: 300;
+  font-weight: 600;
+  color: black;
 }
 .navbar .menu .burger {
   height: 4rem;
@@ -89,7 +90,7 @@
   position: relative;
 }
 .container .main header.header__one {
-  background: url(./img/bg-1.jpg) no-repeat top center/cover;
+  background: url(../img/1.jpg) no-repeat top center/cover;
 }
 .container .main header .header {
   position: absolute;
@@ -157,6 +158,12 @@
           animation: main-animation 1s ease;
   cursor: pointer;
   transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+}
+.container.active .main:hover {
+  transform: perspective(1300px) rotateY(20deg) translateZ(340px) scale(0.5);
+}
+.container.active .main:hover + .shadow.one {
+  transform: perspective(1300px) rotateY(20deg) translateZ(230px) scale(0.5);
 }
 .container.active .shadow.one {
   -webkit-animation: shadow-one 0.6s ease-out;
