--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,35 @@
   z-index: 2;
   opacity: 0.1;
 }
+.container .links {
+  position: absolute;
+  width: 30%;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .links a {
+  text-decoration: none;
+  color: #eee;
+  padding: 0.07rem 0;
+  font-size: 1rem;
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  opacity: 0;
+  transform: translateY(10px);
+  -webkit-animation: hide 0.5s forwards ease;
+          animation: hide 0.5s forwards ease;
+}
+.container .links ul {
+  list-style: none;
+}
 
 .container.active .bar {
   transform: rotate(360deg);
@@ -174,6 +203,10 @@
   -webkit-animation: shadow-two 0.6s ease-out;
           animation: shadow-two 0.6s ease-out;
   transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+}
+.container.active .links a {
+  -webkit-animation: appear 0.5s forwards ease var(--i);
+          animation: appear 0.5s forwards ease var(--i);
 }
 
 @-webkit-keyframes main-animation {
@@ -235,5 +268,45 @@
   }
   100% {
     transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+  }
+}
+@-webkit-keyframes hide {
+  from {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+@keyframes hide {
+  from {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+@-webkit-keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }/*# sourceMappingURL=style.css.map */
