--- a/styles/style.scss
+++ b/styles/style.scss
@@ -169,6 +169,38 @@
             opacity: .1;
         }
     }
+
+    // Links
+    .links {
+        position: absolute;
+        width: 30%;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        a {
+            text-decoration: none;
+            color: #eee;
+            padding: .07rem 0;
+            font-size: 1rem;
+            display: inline-block;
+            text-transform: uppercase;
+            font-weight: 300;
+            letter-spacing: 1px;
+            transition: .3s;
+            opacity: 0;
+            transform: translateY(10px);
+            animation: hide .5s forwards ease;
+        }
+
+        ul {
+            list-style: none;
+        }
+    }
 }
 
 
@@ -194,9 +226,11 @@
         animation: main-animation 1s ease;
         cursor: pointer;
         transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
-        &:hover{
+
+        &:hover {
             transform: perspective(1300px) rotateY(20deg) translateZ(340px) scale(0.5);
-            + .shadow.one{
+
+            +.shadow.one {
                 transform: perspective(1300px) rotateY(20deg) translateZ(230px) scale(0.5);
 
             }
@@ -211,6 +245,11 @@
     .shadow.two {
         animation: shadow-two .6s ease-out;
         transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+    }
+
+    .links a{
+        animation: appear 0.5s forwards ease var(--i);
+
     }
 }
 
@@ -252,5 +291,25 @@
         transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
     }
 }
-    
 
+@keyframes hide{
+    from{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    to{
+        opacity: 0;
+        transform: translateY(10px);
+    }
+}
+
+@keyframes appear{
+    from{
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
