--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,21 @@
 .container .main header.header__one {
   background: url(../img/1.jpg) no-repeat top center/cover;
 }
+.container .main header.header__two {
+  background: url(../img/2.jpg) no-repeat top center/cover;
+}
+.container .main header.header__three {
+  background: url(../img/3.jpg) no-repeat top center/cover;
+}
+.container .main header.header__four {
+  background: url(../img/4.jpg) no-repeat top center/cover;
+}
+.container .main header.header__five {
+  background: url(../img/5.jpg) no-repeat top center/cover;
+}
+.container .main header.header__six {
+  background: url(../img/6.jpg) no-repeat top center/cover;
+}
 .container .main header .header {
   position: absolute;
   width: 100%;
