--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,6 +110,26 @@
                 background: url(../img/1.jpg) no-repeat top center/cover;
             }
 
+            &.header__two {
+                background: url(../img/2.jpg) no-repeat top center/cover;
+            }
+
+            &.header__three {
+                background: url(../img/3.jpg) no-repeat top center/cover;
+            }
+
+            &.header__four {
+                background: url(../img/4.jpg) no-repeat top center/cover;
+            }
+
+            &.header__five {
+                background: url(../img/5.jpg) no-repeat top center/cover;
+            }
+
+            &.header__six {
+                background: url(../img/6.jpg) no-repeat top center/cover;
+            }
+
             .header {
                 position: absolute;
                 width: 100%;
