--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,16 +26,16 @@
         align-items: center;
         // color: #fff;
 
-        .logo {
+        .title {
             font-size: 1.1rem;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 2px;
             line-height: 4rem;
-            color: red;
+            color: rgb(255, 0, 0);
 
             span {
-                font-weight: 600;
+                font-weight: 700;
                 color: black;
             }
         }
